# SimpleGUI

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  gui.cpp  gui.h  main.cpp  setup.py
src/: CMakeLists.txt  camera.cpp  camera.h  glsl_shader.cpp  glsl_shader.h  gui.cpp  gui.h  gui_base.cpp  gui_base.h  mesh.cpp  mesh.h
src/dear_imgui/: CMakeLists.txt
src/ext/: CMakeLists.txt  model.cpp  model.h
src/gui/: CMakeLists.txt  Scene.cpp  Scene.h  basic_fs.glsl  basic_vs.glsl  camera.cpp  camera.h  glsl_shader.cpp  glsl_shader.h  gui.cpp  gui.h  gui_base.cpp  gui_base.h  mesh.cpp  mesh.h  scene.cpp  scene.h
src/model/: CMakeLists.txt  Line.cpp  Line.h  mesh.cpp  mesh.h  sphere.cpp  sphere.h
third/: CMakeLists.txt
third/GLEW/: CMakeLists.txt
third/GLM/glm/: .CMakeLists.txt.icloud  .common.hpp.icloud  .exponential.hpp.icloud  .ext.hpp.icloud  .fwd.hpp.icloud  .geometric.hpp.icloud  .glm.hpp.icloud  .integer.hpp.icloud  .mat2x2.hpp.icloud  .mat2x3.hpp.icloud  .mat2x4.hpp.icloud  .mat3x2.hpp.icloud  .mat3x3.hpp.icloud  .mat3x4.hpp.icloud  .mat4x2.hpp.icloud  .mat4x3.hpp.icloud  .mat4x4.hpp.icloud  .matrix.hpp.icloud  .packing.hpp.icloud  .trigonometric.hpp.icloud  .vec2.hpp.icloud  .vec3.hpp.icloud  .vec4.hpp.icloud  .vector_relational.hpp.icloud
third/GLM/glm/detail/: .._features.hpp.icloud  .._fixes.hpp.icloud  .._noise.hpp.icloud  .._swizzle.hpp.icloud  .._swizzle_func.hpp.icloud  .._vectorize.hpp.icloud  .compute_common.hpp.icloud  .compute_vector_relational.hpp.icloud  .func_common.inl.icloud  .func_common_simd.inl.icloud  .func_exponential.inl.icloud  .func_exponential_simd.inl.icloud  .func_geometric.inl.icloud  .func_geometric_simd.inl.icloud  .func_integer.inl.icloud  .func_integer_simd.inl.icloud  .func_matrix.inl.icloud  .func_matrix_simd.inl.icloud  .func_packing.inl.icloud  .func_packing_simd.inl.icloud  .func_trigonometric.inl.icloud  .func_trigonometric_simd.inl.icloud  .func_vector_relational.inl.icloud  .func_vector_relational_simd.inl.icloud  .glm.cpp.icloud  .qualifier.hpp.icloud  .setup.hpp.icloud  .type_float.hpp.icloud  .type_half.hpp.icloud  .type_half.inl.icloud  .type_mat2x2.hpp.icloud  .type_mat2x2.inl.icloud  .type_mat2x3.hpp.icloud  .type_mat2x3.inl.icloud  .type_mat2x4.hpp.icloud  .type_mat2x4.inl.icloud  .type_mat3x2.hpp.icloud  .type_mat3x2.inl.icloud  .type_mat3x3.hpp.icloud  .type_mat3x3.inl.icloud  (+21 more)
third/GLM/glm/ext/: .matrix_clip_space.hpp.icloud  .matrix_clip_space.inl.icloud  .matrix_common.hpp.icloud  .matrix_common.inl.icloud  .matrix_double2x2.hpp.icloud  .matrix_double2x2_precision.hpp.icloud  .matrix_double2x3.hpp.icloud  .matrix_double2x3_precision.hpp.icloud  .matrix_double2x4.hpp.icloud  .matrix_double2x4_precision.hpp.icloud  .matrix_double3x2.hpp.icloud  .matrix_double3x2_precision.hpp.icloud  .matrix_double3x3.hpp.icloud  .matrix_double3x3_precision.hpp.icloud  .matrix_double3x4.hpp.icloud  .matrix_double3x4_precision.hpp.icloud  .matrix_double4x2.hpp.icloud  .matrix_double4x2_precision.hpp.icloud  .matrix_double4x3.hpp.icloud  .matrix_double4x3_precision.hpp.icloud  .matrix_double4x4.hpp.icloud  .matrix_double4x4_precision.hpp.icloud  .matrix_float2x2.hpp.icloud  .matrix_float2x2_precision.hpp.icloud  .matrix_float2x3.hpp.icloud  .matrix_float2x3_precision.hpp.icloud  .matrix_float2x4.hpp.icloud  .matrix_float2x4_precision.hpp.icloud  .matrix_float3x2.hpp.icloud  .matrix_float3x2_precision.hpp.icloud  .matrix_float3x3.hpp.icloud  .matrix_float3x3_precision.hpp.icloud  .matrix_float3x4.hpp.icloud  .matrix_float3x4_precision.hpp.icloud  .matrix_float4x2.hpp.icloud  .matrix_float4x2_precision.hpp.icloud  .matrix_float4x3.hpp.icloud  .matrix_float4x3_precision.hpp.icloud  .matrix_float4x4.hpp.icloud  .matrix_float4x4_precision.hpp.icloud  (+123 more)
third/GLM/glm/gtc/: .bitfield.hpp.icloud  .bitfield.inl.icloud  .color_space.hpp.icloud  .color_space.inl.icloud  .constants.hpp.icloud  .constants.inl.icloud  .epsilon.hpp.icloud  .epsilon.inl.icloud  .integer.hpp.icloud  .integer.inl.icloud  .matrix_access.hpp.icloud  .matrix_access.inl.icloud  .matrix_integer.hpp.icloud  .matrix_inverse.hpp.icloud  .matrix_inverse.inl.icloud  .matrix_transform.hpp.icloud  .matrix_transform.inl.icloud  .noise.hpp.icloud  .noise.inl.icloud  .packing.hpp.icloud  .packing.inl.icloud  .quaternion.hpp.icloud  .quaternion.inl.icloud  .quaternion_simd.inl.icloud  .random.hpp.icloud  .random.inl.icloud  .reciprocal.hpp.icloud  .reciprocal.inl.icloud  .round.hpp.icloud  .round.inl.icloud  .type_aligned.hpp.icloud  .type_precision.hpp.icloud  .type_precision.inl.icloud  .type_ptr.hpp.icloud  .type_ptr.inl.icloud  .ulp.hpp.icloud  .ulp.inl.icloud  .vec1.hpp.icloud
third/GLM/glm/gtx/: .associated_min_max.hpp.icloud  .associated_min_max.inl.icloud  .bit.hpp.icloud  .bit.inl.icloud  .closest_point.hpp.icloud  .closest_point.inl.icloud  .color_encoding.hpp.icloud  .color_encoding.inl.icloud  .color_space.hpp.icloud  .color_space.inl.icloud  .color_space_YCoCg.hpp.icloud  .color_space_YCoCg.inl.icloud  .common.hpp.icloud  .common.inl.icloud  .compatibility.hpp.icloud  .compatibility.inl.icloud  .component_wise.hpp.icloud  .component_wise.inl.icloud  .dual_quaternion.hpp.icloud  .dual_quaternion.inl.icloud  .easing.hpp.icloud  .easing.inl.icloud  .euler_angles.hpp.icloud  .euler_angles.inl.icloud  .extend.hpp.icloud  .extend.inl.icloud  .extended_min_max.hpp.icloud  .extended_min_max.inl.icloud  .exterior_product.hpp.icloud  .exterior_product.inl.icloud  .fast_exponential.hpp.icloud  .fast_exponential.inl.icloud  .fast_square_root.hpp.icloud  .fast_square_root.inl.icloud  .fast_trigonometry.hpp.icloud  .fast_trigonometry.inl.icloud  .float_notmalize.inl.icloud  .functions.hpp.icloud  .functions.inl.icloud  .gradient_paint.hpp.icloud  (+84 more)
third/GLM/glm/simd/: .common.h.icloud  .exponential.h.icloud  .geometric.h.icloud  .integer.h.icloud  .matrix.h.icloud  .neon.h.icloud  .packing.h.icloud  (+3 more)
third/assimp-5.2.4/: CHANGES
third/glew-2.2.0/: .glew.c.icloud  .glewinfo.c.icloud  .visualinfo.c.icloud  CMakeLists.txt
third/glfw-3.3.8/docs/: CONTRIBUTING.md
(+30 files in other folders)
